# Tennis-Refactoring-Kata

./: .gitignore
cpp/: BeforeAdvantagesTennisScoreFormatting.cpp  BeforeAdvantagesTennisScoreFormatting.h  CMakeLists.txt  EqualTennisScoreFormatting.cpp  EqualTennisScoreFormatting.h  ITennisScoreFormattingStrategy.cpp  ITennisScoreFormattingStrategy.h  PlayerHasAdvantageTennisScoreFormatting.cpp  PlayerHasAdvantageTennisScoreFormatting.h  PlayerOneHasAdvantageTennisScoreFormatting.cpp  PlayerOneHasAdvantageTennisScoreFormatting.h  WinnerTennisScoreFormatting.cpp  WinnerTennisScoreFormatting.h  tennis1.cc
